welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:8: error: ';' expected but 'while' found.
} while (sortieTrouvee == false)}
  ^Poucet:9: error: 'while' expected but identifier found.
avance() 
^Poucet:11: error: '(' expected but '}' found.
	}
        ^