welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var compteur1:Int = 0

avance()
if (estSurBiscuit == true) {compteur1 = compteur1 + 1}
do {while(crossing() == false) {{avance(); if (estSurBiscuit == true) {compteur1 = compteur1 + 1}}
if (compteur1 >= 3) {gauche() ; compteur1 = 0}
else if (compteur1 <= 2) {droite(); compteur1 = 0}
} while (sortieTrouvee == false)}
avance()